# CSViewer

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
src/: CMakeLists.txt  parser.cpp  parser.h
